--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,4 +24,8 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
       - name: Deploy static site to S3 bucket
-        run: aws s3 sync build/ s3://bhupesh-static-website-hosting --delete
+        run: |
+          aws s3 sync build/ s3://bhupesh-static-website-hosting --delete
+          aws cloudfront create-invalidation --distribution-id <distribution-id> --paths "/*"
+        env:
+          DISTRIBUTION_ID: E3GJYN1S7LWK1K
