--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,6 @@ jobs:
       - name: Deploy static site to S3 bucket
         run: |
           aws s3 sync build/ s3://bhupesh-static-website-hosting --delete
-          aws cloudfront create-invalidation --distribution-id <distribution-id> --paths "/*"
+          aws cloudfront create-invalidation --distribution-id "${{ secrets.DISTRIBUTION_ID }}" --paths "/*"
         env:
-          DISTRIBUTION_ID: E3GJYN1S7LWK1K
+          DISTRIBUTION_ID: ${{ secrets.DISTRIBUTION_ID }}
